# OptimiserLibrary

OptimiserLib/: CMakeLists.txt  Optimiser.sln
OptimiserLib/FunctionDLL/: CMakeLists.txt  Exporter.h  FunctionDLL.cpp  FunctionDLL.vcxproj  FunctionDLL.vcxproj.filters  stdafx.cpp  stdafx.h
OptimiserLib/Optimiser/: BackTracking.h  BracketBoundingPhase.cpp  Brent.cpp  Brent.h  CompoundMOM.cpp  CompoundPenalty.cpp  CompoundPenalty.h  Direction.h  DirectionCauchy.h  DirectionNewton.cpp  DirectionQuasiNewton.cpp  ExtremumFactory.cpp  ExtremumFactory.h  FirstConstraint.cpp  Himmelblau.h  LinearConstraintImpl.h  LinearFunction.h  MaximiserBrent.cpp  MinimiserBisection.h  MinimiserExhaustive.cpp  MinimiserExhaustive.h  NonlinearConstraintImpl.h  Optimiser.vcxproj  Optimiser.vcxproj.filters  OptimiserCG.cpp  OptimiserCauchy.h  OptimiserComplex.h  OptimiserEllipsoid.cpp  OptimiserEllipsoid.h  OptimiserFactory.cpp  OptimiserFactory.h  OptimiserFactoryVM.cpp  OptimiserFactoryVM.h  OptimiserGRG.h  OptimiserHJ.cpp  OptimiserHJ.h  OptimiserMarquardt.cpp  OptimiserNewton.cpp  OptimiserNonParHen.cpp  OptimiserPowell.cpp  (+19 more)
OptimiserLib/Optimiser/Henning/: BivariateNormalCDF.m  HK_opt.m  InverseHessian.m  LICENSE.txt  L_UpdateDirection.m  Projection.m  README.txt  SchurUpdate.m  SlimGramMatrix.m
OptimiserLib/Optimiser/include/: BackTracking.h  BracketBoundingPhase.h  CompoundMOM.h  Deb.h  Direction.h  DirectionFactory.h  DirectionNewton.h  DirectionQuasiNewton.h  FirstConstraint.h  LineSearch.h  LineSearchFactory.h  LinearConstraintImpl.h  MaximiserBrent.h  MinimiserBoxed.h  MinimiserBrent.h  MinimiserGolden.h  NegativeFirstConstraint.h  NonlinearConstraintImpl.h  OptimiserBox.h  OptimiserBrent.h  OptimiserCG.h  OptimiserHJ.h  OptimiserHennig.h  OptimiserMOM.h  OptimiserMarquardt.h  OptimiserNewton.h  OptimiserNonParHen.h  OptimiserPenalty.h  OptimiserRandom.h  OptimiserVMBFGS.h  OptimiserVMBlend.h  OptimiserVMBroyden.h  OptimiserVMDFP.h  OptimiserVMLBFGS.h  OptimiserVMPSB.h  Parabolic.h  Rosenbrock.h  STLExtension.h  SecondConstraint.h  StrongWolfe.h  (+4 more)
OptimiserLib/Optimiser/src/: BackTracking.cpp  BracketBoundingPhase.cpp  CompoundMOM.cpp  CompoundPenalty.cpp  Deb.cpp  DirectionCauchy.cpp  DirectionFactory.cpp  DirectionNewton.cpp  DirectionQuasiNewton.cpp  ExtremumFactory.cpp  FirstConstraint.cpp  Himmelblau.cpp  LineSearchFactory.cpp  LinearFunction.cpp  MaximiserBrent.cpp  MinimiserBisection.cpp  MinimiserBoxed.cpp  MinimiserBrent.cpp  MinimiserExhaustive.cpp  MinimiserGolden.cpp  NegativeFirstConstraint.cpp  OptimiserBox.cpp  OptimiserBrent.cpp  OptimiserCG.cpp  OptimiserCauchy.cpp  OptimiserComplex.cpp  OptimiserEllipsoid.cpp  OptimiserFactory.cpp  OptimiserFactoryVM.cpp  OptimiserGRG.cpp  OptimiserHJ.cpp  OptimiserHennig.cpp  OptimiserMOM.cpp  OptimiserMarquardt.cpp  OptimiserNewton.cpp  OptimiserNonParHen.cpp  OptimiserPenalty.cpp  OptimiserPowell.cpp  OptimiserRandom.cpp  OptimiserSimplex.cpp  (+14 more)
OptimiserLib/OptimiserDLL/: CMakeLists.txt  Exporter.h  OptimiserDLL.cpp  OptimiserDLL.vcxproj  OptimiserDLL.vcxproj.filters  stdafx.cpp  stdafx.h
OptimiserLib/OptimiserTestDrive/: OptimiserTestDrive.vcxproj  OptimiserTestDrive.vcxproj.filters  stdafx.cpp
